--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
-h1,h2,h3,p{
+h1,h2,h3{
   text-align: center;
 }
 
@@ -28,9 +28,9 @@ header li:last-child{
   margin-right: 0;
 }
 
-a{
+/* a{
   text-decoration: none;
-}
+} */
 header a:hover{
   color: purple;
   background-color: yellow;
@@ -56,6 +56,10 @@ header a:active{
 
 #section3 {
   background-color: rgba(152, 251, 152, 0.3);  /* 薄いグリーン */
+}
+
+#hobbies {
+  background-color: rgba(255, 160, 122, 0.3);  /* 薄いオレンジ */
 }
 
 .icon {
