--- a/style.css
+++ b/style.css
@@ -1,12 +1,20 @@
 body {
   background-color: #FAFAFA;
   font-family: 'Roboto', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 h1,h2,h3{
   text-align: center;
 }
-
+#main-container {
+  max-width: 1100px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 20px;
+}
 #top-nav, #footer-nav {
   background-color: rgba(160, 155, 216, 0.7);
   color: #000;
@@ -45,7 +53,7 @@ header a:active{
   border-radius: 8px;
 }
 
-/* 各セクションに薄い背景色を設定 */
+
 #section1 {
   background-color: rgba(255, 182, 193, 0.3);  /* 薄いピンク */
 }
@@ -62,10 +70,54 @@ header a:active{
   background-color: rgba(255, 160, 122, 0.3);  /* 薄いオレンジ */
 }
 
+
+
+.portfolio-card-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  margin: 20px auto 0 auto;
+  max-width: 1100px;
+  width: 100%;
+  padding: 0 20px;
+}
+.card {
+  background-color: #fcfcfc;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  width: 250px;
+  transition: transform 0.3s;
+}
+.card:hover {
+  transform: translateY(-10px);
+}
+.card-image {
+  width: 100%;
+  height: 126px;
+  object-fit: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.card-content {
+  padding: 16px;
+}
+.card-title {
+  font-size: 36px;
+  margin: 0 0 10px;
+  font-weight: bold;
+}
+.card-description {
+  margin: 0;
+}
+
+
+
+
 .icon {
-  width: 48px;
-  height: 48px;
-  font-size: 48px;
+  width: 36px;
+  height: 36px;
+  font-size: 36px;
 }
 .social-icons {
   display: flex;
