--- a/style.css
+++ b/style.css
@@ -117,6 +117,17 @@ header a:active{
   gap: 10px;
 }
 
+.speakerdeck-iframe {
+  border: 0px;
+  background: padding-box padding-box rgba(0, 0, 0, 0.1);
+  margin: 0px;
+  padding: 0px;
+  border-radius: 6px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px;
+  width: 100%;
+  height: auto;
+  aspect-ratio: 560 / 314;
+}
 
 
 @media only screen and (max-width: 600px) {
