--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ h1,h2,h3{
   margin: 0 auto;
   padding: 0 20px;
 }
-#top-nav, #footer-nav {
+#header-nav, #footer-nav {
   background-color: rgba(160, 155, 216, 0.7);
   color: #000;
   text-align: center;
@@ -76,15 +76,18 @@ header a:active{
   padding: 0 20px;
 }
 .card {
-  background-color: #fcfcfc;
+  background-color: #a09bd8;
+  color: #ffffff;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   width: 250px;
-  transition: transform 0.3s;
+  transition: transform 0.3s, background-color 0.3s, color 0.3s;
 }
 .card:hover {
   transform: translateY(-10px);
+  background-color: #6f729c;
+  color: #ffffff;
 }
 .card-image {
   width: 100%;
@@ -97,7 +100,7 @@ header a:active{
   padding: 16px;
 }
 .card-title {
-  font-size: 36px;
+  font-size: 30px;
   margin: 0 0 10px;
   font-weight: bold;
 }
@@ -105,7 +108,9 @@ header a:active{
   margin: 0;
 }
 
-
+.fab {
+  font-family: "Font Awesome 5 Brands";
+}
 .icon {
   width: 36px;
   height: 36px;
@@ -130,10 +135,9 @@ header a:active{
   frameborder: 0;
 }
 
-
 @media only screen and (max-width: 600px) {
   /* スマホ用のスタイル */
-  #top-nav, #footer-nav {
+  #header-nav, #footer-nav {
     padding: 0.5em;
   }
   .icon {
@@ -144,7 +148,7 @@ header a:active{
 
 @media only screen and (min-width: 601px) and (max-width: 1024px) {
   /* タブレット用のスタイル */
-  #top-nav, #footer-nav {
+  #header-nav, #footer-nav {
     padding: 0.8em;
   }
   .icon {
