--- a/style.css
+++ b/style.css
@@ -20,13 +20,13 @@ h1,h2,h3{
   padding: 0 10px;
 }
 #header-nav, #footer-nav {
-  background-color: rgba(2, 7, 93, 1.0);
-  color: #A08BD8;
+  background-color: #eee;
+  color: #663399;
   text-align: center;
   padding: 1em;
 }
 nav ul li a{
-  color: #FFFFFF;
+  color: #663399;
   transition: background-color 0.3s, color 0.3s;
 }
 header ul{
@@ -53,7 +53,7 @@ header a:active{
   color: red;
 }
 #footer-nav a {
-  color: #E0E0E0;
+  color: #111;
   text-shadow: 0px 0px 8px rgba(0,0,0, 0.5); 
 }
 
@@ -125,6 +125,7 @@ header a:active{
 
 .fab {
   vertical-align: middle;
+  padding: 14px;
 }
 .icon {
   width: 36px;
